# OpenMP_Practice

./: LICENSE  README.md  matrix.ipynb  matrix2.ipynb  minmax.ipynb  myplots.py  requirements.txt  scalar.ipynb  scalar2.ipynb
C++/: CMakeLists.txt  matrix.cpp  matrix2.cpp  minmax.cpp  scalar.cpp  scalar2.cpp
data/: matrix_1.csv  matrix_2.csv  matrix_dynamic.csv  matrix_guided.csv  matrix_static.csv  minmax_critical.csv  minmax_lock.csv  minmax_reduction.csv  scalar_atomic.csv  scalar_critical.csv  scalar_lock.csv  scalar_reduction.csv  scalar_sections.csv
